--- a/Portfolio/styles.css
+++ b/Portfolio/styles.css
@@ -10,7 +10,7 @@ body,td,th,p{
 body {
 	background-color: #fdfdfd;
 	margin: 0;
-	position:relative;
+  /*position:relative;*/
 }
 ul, li {
 	font-family: Arial, Helvetica, sans-serif;
@@ -38,6 +38,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 #maincontent {
   background-color: #f3f3f3;
   min-height: 100%;
+  width: 100%;
 }
 #footer {
   background-color: #444;
@@ -71,7 +72,7 @@ nav h1 a {
     background-color: #eee;
     font-size: 17px;
     margin: 0;
-    width: calc(50% - 80px);
+    /*width: calc(50% - 80px);*/
 }
 
 /* Display list items side by side */
@@ -106,9 +107,11 @@ nav h1 a {
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  height: 50px;
+  height: 90px;
   background-color: #3397DB;
-  align-items: center;
+  float: left;
+  overflow: hidden;
+  padding-bottom:20px;
 }
 .filter-options h2 {
   color: white;
@@ -136,6 +139,7 @@ nav h1 a {
   margin: 0;
   padding: 30px 15px 60px;
   text-align: center;
+  width:100%;
 }
 #restaurants-list li {
   background-color: #fff;
@@ -146,10 +150,16 @@ nav h1 a {
   padding: 0 30px 25px;
   text-align: left;
   width: 270px;
+  list-style-type:none;
+  display: inline-block;
+  
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
-  display: block;
+  flex:20%;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
   margin: 0;
   max-width: 100%;
   min-height: 248px;
@@ -190,7 +200,9 @@ nav h1 a {
   z-index: 1000;
 }
 .inside #map-container {
+
   background: blue none repeat scroll 0 0;
+  padding-top: 40px;
   height: 87%;
   position: fixed;
   right: 0;
@@ -204,7 +216,7 @@ nav h1 a {
 }
 .inside #footer {
   bottom: 0;
-  position: absolute;
+  position: fixed;
   width: 50%;
 }
 #restaurant-name {
@@ -264,12 +276,94 @@ nav h1 a {
   margin: 0 0 30px;
   overflow: hidden;
   padding: 0 20px 20px;
-  position: relative;
+  /*position: relative;*/
   width: 85%;
 }
 #reviews-list li p {
   margin: 0 0 10px;
 }
 #restaurant-hours td {
-  color: #666;
+  color: #666; 
 }
+@media screen and (min-width: 300px) {
+	.filter-options  {
+	  display: flex;
+	  flex-wrap: warp;
+	  flex-direction: column;
+	}
+  }
+  @media screen and (max-width:700px) {
+    #breadcrumb {
+      width: 100%;
+      font-size: 25px;
+    }
+    }
+    @media screen and (max-width:850px) {
+    .inside #map-container {
+       display: flex;
+       flex-direction: column;
+       width: 100%; 
+       height: 50%;
+       flex-wrap:nowrap;    
+    }
+    }
+  
+    @media only screen and (max-width: 1370) and (min-width: 1000px) {
+      .inside #map-container {
+         display: flex;
+         flex-direction: row;
+         width: 100%; 
+         height: 20%; 
+         flex-wrap:wrap;    
+      }
+      }
+
+      @media screen and (max-width:1370px) {
+        #restaurant-name {
+          font-size: 15pt;
+          line-height: 1.0;  
+        }
+        }
+@media screen and (max-width:850px) {
+      #restaurant-container {
+        padding-top: 700px;
+        display: flex;
+        flex-direction: row; 
+        flex-wrap:wrap; 
+        width:100%; 
+        overflow: hidden;        
+      }}
+
+      @media only screen and (max-width: 1370) and (min-width: 1000px) {
+        .inside #map-container {
+        padding-top: 1000px;
+        display: flex;
+        flex-direction: column; 
+        flex-wrap:wrap; 
+        width:100%;    
+        }
+        }
+  
+      @media screen and (max-width:1023px) {
+        #reviews-container {
+          display: flex;
+          flex-direction: column; 
+          flex-wrap:wrap; 
+          width:100%;
+          overflow: hidden;
+               
+        }
+        }
+        @media screen and (max-width:1023px) {
+          .inside #footer {
+            display: flex;
+            flex-direction: row; 
+            flex-wrap:wrap; 
+            width: 100%;
+            justify-content: center;
+            align-items: center;
+            overflow: hidden;     
+          }
+          }
+  
+     
